--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,3 +1,17 @@
 Home page
 
 <a href="{{ path('app_logout') }}">Log out</a>
+
+<br>
+User roles:
+{% if roles is defined %}
+    {% for role in roles %}
+        {{ role.getName() }}
+    {% endfor %}
+{% endif %}
+<br>
+<form method="post" action="{{ path('role_create') }}">
+    <label for="new_role"> Create new role</label>
+    <input name="new_role" id="new_role">
+    <button type="submit">Create</button>
+</form>
